@@ -1,11 +1,10 @@
 package eu.jsparrow.core.rule.impl;
 
-import static org.hamcrest.MatcherAssert.assertThat;
-import static org.hamcrest.Matchers.contains;
-import static org.hamcrest.Matchers.equalTo;
-import static org.hamcrest.Matchers.hasSize;
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import static org.junit.jupiter.api.Assertions.assertFalse;
 import static org.junit.jupiter.api.Assertions.assertTrue;
+
+import java.util.Arrays;
 
 import org.eclipse.jdt.core.IJavaProject;
 import org.eclipse.jdt.core.JavaCore;
@@ -48,21 +47,22 @@ public class UseFilesWriteStringRuleTest {
 
 	@Test
 	public void test_ruleId() {
-		String ruleId = rule.getId();
-		assertThat(ruleId, equalTo("UseFilesWriteString"));
+		assertEquals("UseFilesWriteString", rule.getId());
 	}
 
 	@Test
 	public void test_ruleDescription() {
 		RuleDescription description = rule.getRuleDescription();
-		assertThat(description.getTags(),
-				contains(Tag.JAVA_11, Tag.PERFORMANCE, Tag.OLD_LANGUAGE_CONSTRUCTS, Tag.IO_OPERATIONS));
-		assertThat(description.getTags(), hasSize(4));
-		assertThat(description.getName(), equalTo("Use Files.writeString"));
-		assertThat(description.getDescription(), equalTo(
-				"Java 11 introduced 'Files.writeString(Path, CharSequence, Charset, OpenOption...)' and "
-						+ "'Files.writeString(Path, CharSequence, OpenOption...)' for writing text into a file by one "
-						+ "single invocation and in an efficient non-blocking manner. \nThis rule replaces 'BufferedWriters' "
-						+ "that are used to write a single value into a file, with 'Files.write(...)'."));
+		assertEquals("Use Files.writeString", description.getName());
+		assertEquals(Arrays.asList(Tag.JAVA_11, Tag.PERFORMANCE, Tag.OLD_LANGUAGE_CONSTRUCTS, Tag.IO_OPERATIONS),
+				description.getTags());
+		assertEquals(5, description.getRemediationCost()
+			.toMinutes());
+		assertEquals(""
+				+ "Java 11 introduced 'Files.writeString(Path, CharSequence, Charset, OpenOption...)' and "
+				+ "'Files.writeString(Path, CharSequence, OpenOption...)' for writing text into a file by one "
+				+ "single invocation and in an efficient non-blocking manner. \nThis rule replaces 'BufferedWriters' "
+				+ "that are used to write a single value into a file, with 'Files.write(...)'.",
+				description.getDescription());
 	}
 }
